RESOLVED FIXED238655
_WKDataTask doesn't work in macCatalyst
https://bugs.webkit.org/show_bug.cgi?id=238655
Summary _WKDataTask doesn't work in macCatalyst
Tim Horton
Reported 2022-04-01 00:34:22 PDT
_WKDataTask doesn't work in macCatalyst
Attachments
Patch (3.67 KB, patch)
2022-04-01 00:34 PDT, Tim Horton
no flags
Patch (16.24 KB, patch)
2022-04-01 14:46 PDT, Tim Horton
no flags
Patch (26.26 KB, patch)
2022-04-01 15:22 PDT, Tim Horton
ews-feeder: commit-queue-
Patch (26.26 KB, patch)
2022-04-01 15:24 PDT, Tim Horton
ews-feeder: commit-queue-
Patch (26.33 KB, patch)
2022-04-01 15:26 PDT, Tim Horton
ews-feeder: commit-queue-
Patch (26.44 KB, patch)
2022-04-01 15:46 PDT, Tim Horton
ews-feeder: commit-queue-
Tim Horton
Comment 1 2022-04-01 00:34:35 PDT
Alexey Proskuryakov
Comment 2 2022-04-01 07:32:34 PDT
Comment on attachment 456331 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=456331&action=review > Source/WTF/wtf/PlatformHave.h:458 > + || (PLATFORM(MACCATALYST) && __IPHONE_OS_VERSION_MIN_REQUIRED >= 140000) \ Please remove obsolete OS version checks instead of adding more.
Brent Fulgham
Comment 3 2022-04-01 10:17:51 PDT
Comment on attachment 456331 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=456331&action=review > Source/WTF/wtf/PlatformHave.h:1063 > +// FIXME: Does this intend to exclude macCatalyst? I believe we do want this on, too. > Source/WTF/wtf/PlatformHave.h:1201 > +// FIXME: Does this intend to exclude macCatalyst? We should support this on macCatalyst, too.
Tim Horton
Comment 4 2022-04-01 10:19:28 PDT
Comment on attachment 456331 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=456331&action=review >> Source/WTF/wtf/PlatformHave.h:458 >> + || (PLATFORM(MACCATALYST) && __IPHONE_OS_VERSION_MIN_REQUIRED >= 140000) \ > > Please remove obsolete OS version checks instead of adding more. Good.... point > Source/WTF/wtf/PlatformHave.h:1201 > +// FIXME: Does this intend to exclude macCatalyst? Per Arne says this one should be OK to add catalyst
Tim Horton
Comment 5 2022-04-01 14:46:15 PDT
Alexey Proskuryakov
Comment 6 2022-04-01 14:54:47 PDT
Comment on attachment 456405 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=456405&action=review > Source/WTF/wtf/PlatformHave.h:465 > #if PLATFORM(IOS) && __IPHONE_OS_VERSION_MIN_REQUIRED < 140000 > +// FIXME: Does this intend to exclude macCatalyst? This is always true, so the whole section can be deleted. > Source/WTF/wtf/PlatformHave.h:746 > +#if (PLATFORM(IOS) || PLATFORM(MACCATALYST)) && __IPHONE_OS_VERSION_MIN_REQUIRED >= 150000 I don't think that this OS version check is still relevant?
Alexey Proskuryakov
Comment 7 2022-04-01 15:20:15 PDT
Comment on attachment 456405 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=456405&action=review >> Source/WTF/wtf/PlatformHave.h:465 >> +// FIXME: Does this intend to exclude macCatalyst? > > This is always true, so the whole section can be deleted. Always false. Was thinking along the lines of "it's no longer broken" :)
Tim Horton
Comment 8 2022-04-01 15:22:52 PDT
Tim Horton
Comment 9 2022-04-01 15:24:57 PDT
Tim Horton
Comment 10 2022-04-01 15:26:22 PDT
Tim Horton
Comment 11 2022-04-01 15:46:48 PDT
EWS
Comment 12 2022-04-03 01:05:16 PDT
Committed r292275 (249173@main): <https://commits.webkit.org/249173@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456412 [details].
Radar WebKit Bug Importer
Comment 13 2022-04-03 01:06:24 PDT
Note You need to log in before you can comment on or make changes to this bug.