_WKDataTask doesn't work in macCatalyst https://bugs.webkit.org/show_bug.cgi?id=238655

Reviewed by Alexey Proskuryakov.

Source/WebCore/PAL:

* pal/spi/cf/CFNetworkSPI.h:

Source/WebKit:

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(-[WKNetworkSessionDelegate URLSession:downloadTask:didResumeAtOffset:expectedTotalBytes:]): Deleted.

Source/WTF:

* wtf/PlatformHave.h:
Enable HAVE(NSURLSESSION_TASK_DELEGATE) on macCatalyst.
Drive-by enable a few other things on macCatalyst.
Remove and simplify some always-true version checks.
Leave some comments about ones I'm not sure about.



Canonical link: https://commits.webkit.org/249173@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292275 268f45cc-cd09-0410-ab3c-d52691b4dbfc